Fix new bug by which scrolling would cause shop layout to collapse after navigation
Addded another element inside shop-items to which transforms can safely 
be applied without interfering with the transforms applied by Vue on the 
main element as a part of scrolling

Also closes #9, a related bug that arose in a slightly different 
scenario

--- a/src/components/shop-item/style.sass
+++ b/src/components/shop-item/style.sass
@@ -10,6 +10,12 @@
   cursor: pointer
   perspective: 800px
 
+  .transform-wrapper
+    position: absolute
+    top: 0
+    left: 0
+    height: 100%
+
   img
     position: relative
     z-index: 0
